made .navbar fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -276,7 +276,7 @@ body {
     font-size: 1.2em;
   }
 
-  .mission {
+  .mission-button {
     justify-content: end;
   }
   .mission-button button {
