--- a/css/styles.css
+++ b/css/styles.css
@@ -277,7 +277,7 @@ body {
   }
 
   .mission-button {
-    justify-content: end;
+    justify-items: end;
   }
   .mission-button button {
     color: #ffffff;
