--- a/css/styles.css
+++ b/css/styles.css
@@ -254,12 +254,10 @@ body {
     /* padding-top: 1em; */
     /* padding-bottom: 3em; */
     row-gap: 2em;
-    grid-template-rows: 200px auto auto;
+    /* grid-template-rows: 200px auto auto; */
     /* grid-template-columns: 1fr; */
     grid-template-areas:
       "pic"
-      "quote"
-      "missionbtn";
     height: 90vh;
   }
   .navbar {
