--- a/css/styles.css
+++ b/css/styles.css
@@ -256,7 +256,7 @@ body {
     row-gap: 2em;
     grid-template-rows: 200px;
     /* grid-template-columns: 1fr; */
-    grid-template-areas: "pic null null";
+    grid-template-areas: "missionbtn";
 
     height: 90vh;
   }
