made .navbar fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -256,7 +256,8 @@ body {
     row-gap: 2em;
     grid-template-rows: 200px;
     /* grid-template-columns: 1fr; */
-    grid-template-areas: "missionbtn";
+    grid-template-areas: "missionbtn
+    null, missionnull";
 
     height: 90vh;
   }
