--- a/css/styles.css
+++ b/css/styles.css
@@ -244,7 +244,7 @@ body {
   }
 
   .hero-content {
-    border: 1px solid #ccc;
+    border: 1px solid green;
     justify-content: center;
     display: flex;
     flex-direction: column;
