--- a/css/styles.css
+++ b/css/styles.css
@@ -247,7 +247,7 @@ body {
   .hero-content {
     border: 3px solid green;
     border-style: dashed;
-    justify-content: center;
+    align-items: center;
     justify-content: space-evenly;
     display: flex;
     flex-direction: column;
