--- a/css/styles.css
+++ b/css/styles.css
@@ -274,6 +274,7 @@ body {
   .mission-button {
     display: absolute;
     bottom: 0;
+    width: 100%;
   }
   .mission-button button {
     color: #ffffff;
