--- a/css/styles.css
+++ b/css/styles.css
@@ -252,6 +252,7 @@ body {
     display: flex;
     flex-direction: column;
     padding: 0;
+    padding-top: 20px;
     height: 90vh;
 
     /* padding-top: 100px; */
