--- a/css/styles.css
+++ b/css/styles.css
@@ -244,6 +244,10 @@ body {
     display: block;
   }
 
+  .normal-pic {
+    display: none;
+  }
+
   .hero-content {
     border: 3px solid green;
     border-style: dashed;
