--- a/css/styles.css
+++ b/css/styles.css
@@ -240,6 +240,10 @@ body {
     width: 60px;
   }
 
+  .pic {
+    display: none;
+  }
+
   .hero-content {
     border: 3px solid green;
     border-style: dashed;
