--- a/css/test.css
+++ b/css/test.css
@@ -37,6 +37,8 @@ h2 {
 
 p {
   margin: 10px 0;
+  font-size: 1.2rem;
+  letter-spacing: 1px;
 }
 
 img {
@@ -46,9 +48,9 @@ img {
 .navbar {
   position: fixed;
   top: 0;
-  background-color: #c1c1c1;
-  height: 70px;
-  color: rgb(255, 255, 255);
+  background-color: #fff;
+  height: 10%;
+  color: #000;
   width: 100%;
 }
 
@@ -70,10 +72,11 @@ img {
 }
 
 .container {
-  max-width: 1100px;
+  max-width: 1400px;
   margin: 0 auto;
   overflow: auto;
   padding: 0 40px;
+  max-height: 100%;
 }
 
 .flex {
@@ -86,23 +89,24 @@ img {
 .grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  column-gap: 5em;
 }
 
 .showcase .heading {
   color: white;
   font-size: 2rem;
-  padding-top: 2em;
 }
 .showcase p {
   color: white;
   line-height: 2rem;
 }
 .showcase {
-  margin-top: 70px;
+  margin-top: 10%;
+
   background: linear-gradient(
     45deg,
     rgba(50, 13, 13, 0.9682466736694678) 0%,
     rgba(143, 34, 34, 1) 84%
   );
-  height: 100vh;
+  height: 95vh;
 }
