--- a/css/test.css
+++ b/css/test.css
@@ -49,7 +49,7 @@ img {
   position: fixed;
   top: 0;
   background-color: #fff;
-  height: 10%;
+  height: 10vh;
   color: #000;
   width: 100%;
 }
@@ -90,6 +90,7 @@ img {
   display: grid;
   grid-template-columns: 1fr 1fr;
   column-gap: 5em;
+  justify-items: center;
 }
 
 .showcase .heading {
@@ -100,13 +101,19 @@ img {
   color: white;
   line-height: 2rem;
 }
-.showcase {
-  margin-top: 10%;
 
+.showcase {
+  margin-top: 100px;
+  padding-top: 100px;
   background: linear-gradient(
     45deg,
     rgba(50, 13, 13, 0.9682466736694678) 0%,
     rgba(143, 34, 34, 1) 84%
   );
-  height: 95vh;
+  height: 90vh;
+}
+
+.showcase-pic {
+  width: 500px;
+  height: 500px;
 }
