made .navbar fixed

--- a/css/test.css
+++ b/css/test.css
@@ -49,7 +49,7 @@ img {
   position: fixed;
   top: 0;
   background-color: #fff;
-  height: 10vh;
+  height: 100px;
   color: #000;
   width: 100%;
 }
