--- a/css/test.css
+++ b/css/test.css
@@ -118,6 +118,11 @@ img {
   height: 500px;
 }
 
+.bdamap {
+  width: 100px;
+  height: 100px;
+}
+
 @media (max-width: 1023px) {
   .showcase .heading {
     font-size: 20px;
@@ -142,6 +147,10 @@ img {
     padding: 0 10px;
   }
 
+  .bdamap {
+    width: 50px;
+    height: 50px;
+  }
   .showcase-pic {
     width: 200px;
     height: 200px;
