--- a/css/test.css
+++ b/css/test.css
@@ -142,7 +142,7 @@ img {
   }
   .showcase {
     margin-top: 0;
-    padding-top: 0;
+    padding-top: 50px;
   }
   .container {
     padding: 0 10px;
