--- a/css/test.css
+++ b/css/test.css
@@ -137,6 +137,12 @@ img {
     display: none;
   }
 
+  p {
+    margin: 20px 0;
+    font-size: 1rem;
+    letter-spacing: normal;
+  }
+
   .navbar {
     height: 50px;
   }
