--- a/css/test.css
+++ b/css/test.css
@@ -125,8 +125,9 @@ img {
 
 @media (max-width: 1023px) {
   .showcase .heading {
-    font-size: 25px;
+    font-size: 24px;
     padding-top: 30px;
+    text-align: center;
   }
   /* make grid 1 column; */
   .grid {
