--- a/css/test.css
+++ b/css/test.css
@@ -127,7 +127,10 @@ img {
   .showcase .heading {
     font-size: 24px;
     padding-top: 30px;
-    text-align: center;
+  }
+
+  .heading > span {
+    justify-content: center;
   }
   /* make grid 1 column; */
   .grid {
