--- a/css/test.css
+++ b/css/test.css
@@ -131,6 +131,7 @@ img {
 
   .heading > span {
     justify-content: center;
+    text-decoration: underline;
   }
   /* make grid 1 column; */
   .grid {
