--- a/css/test.css
+++ b/css/test.css
@@ -121,7 +121,7 @@ img {
 .bdamap {
   width: 100px;
   height: 100px;
-}
+/* }
 
 @media (max-width: 1023px) {
   .showcase .heading {
@@ -160,12 +160,11 @@ img {
   }
 
   .bdamap {
-    width: 50px;
-    height: 50px;
+
     display: none;
   }
   .showcase-pic {
     width: 200px;
     height: 200px;
   }
-}
+} */
