--- a/css/test.css
+++ b/css/test.css
@@ -17,6 +17,7 @@ body {
   font-family: "Roboto Slab";
   color: var(--body-text-cl);
   line-height: 1.6;
+  overflow: auto;
 }
 
 ul {
@@ -46,6 +47,7 @@ img {
 }
 
 .navbar {
+  align-items: center;
   position: fixed;
   top: 0;
   background-color: #fff;
@@ -93,9 +95,8 @@ img {
 
 .flex {
   display: flex;
-  justify-content: center;
   align-items: center;
-  /* height: 100%; */
+  height: 100%;
 }
 
 .grid {
