--- a/css/test.css
+++ b/css/test.css
@@ -90,9 +90,6 @@ img {
   padding-top: 100px;
 }
 
-.wrapper {
-}
-
 .flex {
   display: flex;
   align-items: center;
@@ -123,4 +120,15 @@ img {
 .bdamap {
   width: 100px;
   height: 100px;
+}
+
+/* Media queries */
+@media screen and (max-width: 600px) {
+  /* .showcase-pic {
+    display: none;
+  } */
+
+  .grid {
+    grid-template-columns: 1fr;
+  }
 }
