--- a/css/test.css
+++ b/css/test.css
@@ -123,7 +123,7 @@ img {
 }
 
 /* Media queries */
-@media screen and (min-width: 320px) and (max-width: 1024px) {
+@media screen and (max-width: 320px) {
   .showcase-pic {
     display: none;
   }
