--- a/css/test.css
+++ b/css/test.css
@@ -123,7 +123,9 @@ img {
 }
 
 /* Media queries */
-@media screen and (max-width: 320px) {
+
+/* Mobile devices */
+@media screen and (max-width: 375px) {
   .showcase-pic {
     display: none;
   }
