--- a/css/test.css
+++ b/css/test.css
@@ -125,12 +125,11 @@ img {
 /* Media queries */
 
 /* Mobile devices */
-@media screen and (max-width: 375px),
-  (orientation: landscape),
-  (orientation: portrait) {
+@media screen and (max-width: 375px) or ((max-width: 375px ) and (orientation=landscape)) {
   .showcase-pic {
     display: none;
   }
+}
 
   .grid {
     grid-template-columns: 1fr;
