made .navbar fixed

--- a/css/test.css
+++ b/css/test.css
@@ -125,7 +125,7 @@ img {
 /* Media queries */
 
 /* Mobile devices */
-@media screen and (max-width: 375px) or ((max-width: 375px ) and (orientation:landscape)) {
+@media screen and (max-width: 375px) {
   .showcase-pic {
     display: none;
   }
