--- a/css/test.css
+++ b/css/test.css
@@ -133,3 +133,12 @@ img {
     grid-template-columns: 1fr;
   }
 }
+
+@media screen and (max-width: 375px) and (orientation: landscape) {
+  .showcase-pic {
+    display: none;
+  }
+  .grid {
+    grid-template-columns: 1fr;
+  }
+}
