made .navbar fixed

--- a/css/test.css
+++ b/css/test.css
@@ -134,7 +134,9 @@ img {
   }
 }
 
-@media screen and (max-width: 375px) and (orientation: landscape) {
+/* Smartphones (portrait and landscape) ----------- */
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
   .showcase-pic {
     display: none;
   }
