--- a/css/test.css
+++ b/css/test.css
@@ -144,3 +144,10 @@ img {
     grid-template-columns: 1fr;
   }
 }
+
+/* Smartphones (portrait) ----------- */
+@media only screen and (max-width: 320px) {
+  .showcase-title {
+    font-size: smaller;
+  }
+}
