--- a/css/styles.css
+++ b/css/styles.css
@@ -32,10 +32,9 @@ body {
 
 .container {
   scroll-behavior: smooth;
-
+  padding: 0 60px;
   position: relative;
   width: 100vw;
-  height: 100vh;
   background: linear-gradient(
     45deg,
     rgba(50, 13, 13, 0.9682466736694678) 0%,
@@ -44,16 +43,16 @@ body {
 }
 
 .hero-content {
-  padding: var(--normal-padding);
   display: grid;
   column-gap: 1em;
   row-gap: 5em;
+  padding-top: 120px;
   grid-template-rows: 200px 200px 100px;
   grid-template-areas:
     "title pic pic"
     "quote pic pic"
     "missionbtn pic pic";
-  height: 100%;
+  height: 100vh;
   width: 100%;
 }
 
@@ -61,12 +60,11 @@ body {
   overflow: hidden;
   position: fixed;
   display: flex;
-  height: 10%;
+  height: 70px;
   justify-content: space-between;
   top: 0;
   width: 100%;
-  padding-left: 3em;
-  padding-right: 3em;
+
   z-index: 99;
   background: #ffffff;
 }
@@ -132,7 +130,7 @@ body {
 }
 
 .mission-button button {
-  width: 10em;
+  width: 100%;
   height: 2.6em;
   font-family: "Roboto Slab", serif;
   font-size: 1.5em;
@@ -145,7 +143,7 @@ body {
 
 .quote {
   grid-area: quote;
-  width: 20em;
+
   color: #fff;
   line-height: 2em;
   font-size: 1.6em;
