--- a/css/styles.css
+++ b/css/styles.css
@@ -20,14 +20,13 @@ after {
 
 body {
   font-family: "Roboto Slab", serif;
-  background: transparent;
-  height: 100%;
-  /* overflow: hidden; */
+
   background: linear-gradient(
     45deg,
     rgba(50, 13, 13, 0.9682466736694678) 0%,
     rgba(143, 34, 34, 1) 84%
   );
+  /* overflow: hidden; */
 }
 
 .container {
@@ -47,13 +46,18 @@ body {
   column-gap: 1em;
   row-gap: 5em;
   padding-top: 120px;
-  grid-template-rows: 200px 200px 100px;
+  align-items: top;
   grid-template-areas:
     "title pic pic"
     "quote pic pic"
     "missionbtn pic pic";
   height: 100vh;
   width: 100%;
+  background: linear-gradient(
+    45deg,
+    rgba(50, 13, 13, 0.9682466736694678) 0%,
+    rgba(143, 34, 34, 1) 84%
+  );
 }
 
 .navbar {
@@ -127,19 +131,20 @@ body {
 
 .mission-button {
   grid-area: missionbtn;
+  grid-column: 1/4;
+  justify-self: center;
 }
 
-.mission-button button {
-  width: 100%;
-  height: 2.6em;
+/* .mission-button button {
   font-family: "Roboto Slab", serif;
   font-size: 1.5em;
   background-color: var(--secondary-color);
   border-radius: 5px;
   border-style: none;
   cursor: pointer;
+  justify-content: center;
   align-items: baseline;
-}
+} */
 
 .quote {
   grid-area: quote;
@@ -167,7 +172,7 @@ body {
 /* Large screens */
 @media only screen and (min-width: 1920px) {
   .container {
-    padding: 0 140px;
+    padding: 0 120px;
   }
 
   .pic img {
@@ -176,4 +181,11 @@ body {
     padding-right: 1.5em;
     margin-left: -8em;
   }
+}
+
+.fa-chevron-down {
+  font-size: 4em;
+  color: #fff;
+
+  cursor: pointer;
 }
