--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ body {
   padding: 0 60px;
   position: relative;
   width: 100vw;
-  height: 100%;
+  height: 100vh;
   background: linear-gradient(
     45deg,
     rgba(50, 13, 13, 0.9682466736694678) 0%,
