--- a/css/styles.css
+++ b/css/styles.css
@@ -58,6 +58,7 @@ body {
     "missionbtn pic pic";
 
   width: 100%;
+  height: 100vh;
   background: linear-gradient(
     45deg,
     rgba(50, 13, 13, 0.9682466736694678) 0%,
