--- a/css/styles.css
+++ b/css/styles.css
@@ -23,26 +23,19 @@ html {
 }
 body {
   font-family: "Roboto Slab", serif;
-
+  background-color: rgb(109, 42, 42);
   background: linear-gradient(
     45deg,
-    rgba(50, 13, 13, 0.9682466736694678) 0%,
+    rgba(50, 13, 13, 0.9682466736694678) 40%,
     rgba(143, 34, 34, 1) 84%
   );
-  /* overflow: hidden; */
 }
 
 .container {
   padding: 0 60px;
-  position: relative;
   width: 100vw;
   height: 100vh;
   scroll-snap-type: y mandatory;
-  background: linear-gradient(
-    45deg,
-    rgba(50, 13, 13, 0.9682466736694678) 0%,
-    rgba(143, 34, 34, 1) 84%
-  );
 }
 
 .hero-content {
@@ -58,12 +51,7 @@ body {
     "missionbtn pic pic";
 
   width: 100%;
-  height: 100vh;
-  background: linear-gradient(
-    45deg,
-    rgba(50, 13, 13, 0.9682466736694678) 0%,
-    rgba(143, 34, 34, 1) 84%
-  );
+  height: 100%;
 }
 
 .navbar {
