--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@ body {
 .container {
   padding: 0 60px;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   scroll-snap-type: y mandatory;
 }
 
@@ -51,7 +51,7 @@ body {
     "missionbtn pic pic";
 
   width: 100%;
-  height: 100vh;
+  height: 100%;
 }
 
 .navbar {
