--- a/css/styles.css
+++ b/css/styles.css
@@ -178,12 +178,11 @@ body {
   cursor: pointer;
 }
 /* Tablets */
-@media only screen and (max-width: 768px) {
+@media only screen and (min-width: 768px) {
   .pic img {
-    width: 350px;
-    height: 350px;
+    width: 300px;
+    height: 300px;
     padding-right: 1.5em;
-    margin-left: -8em;
   }
   .hero-content {
     grid-template-areas:
