--- a/css/styles.css
+++ b/css/styles.css
@@ -178,7 +178,7 @@ body {
   cursor: pointer;
 }
 /* Tablets */
-@media only screen and (min-width: 768px) {
+@media only screen and (max-width: 768px) {
   .pic img {
     width: 300px;
     height: 300px;
