--- a/css/styles.css
+++ b/css/styles.css
@@ -177,8 +177,17 @@ body {
 
   cursor: pointer;
 }
+
+@media only screen and (min-width: 1024px) {
+  .pic img {
+    width: 536px;
+    height: 546px;
+    padding-right: 1.5em;
+  }
+}
+
 /* Tablets */
-@media only screen and (max-width: 768px) {
+@media only screen and (min-width: 768px) {
   .pic img {
     width: 300px;
     height: 300px;
