--- a/css/styles.css
+++ b/css/styles.css
@@ -178,7 +178,7 @@ body {
   cursor: pointer;
 }
 
-@media only screen and (min-width: 1024px) {
+@media only screen and (max-width: 1024px) {
   .pic img {
     width: 536px;
     height: 546px;
