--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,6 @@ body {
 }
 
 .container {
-  padding: 0 60px;
   width: 100vw;
   height: 100vh;
   scroll-snap-type: y mandatory;
@@ -43,7 +42,7 @@ body {
   column-gap: 1em;
   row-gap: 5em;
   padding-top: 120px;
-  /* align-items: bottom; */
+  align-items: center;
   scroll-snap-align: start;
   grid-template-rows: 1fr 1fr 1fr;
   grid-template-columns: 1fr 1fr;
@@ -52,7 +51,7 @@ body {
     "quote"
     "missionbtn";
 
-  width: 100%;
+  width: 100vw;
   height: 100vh;
 }
 
@@ -103,8 +102,8 @@ body {
 
 .title {
   grid-area: title;
-  font-size: 2.7em;
-  letter-spacing: 0.02em;
+  /* font-size: 2.7em; */
+  /* letter-spacing: 0.02em; */
   color: #fff;
 }
 
