--- a/css/styles.css
+++ b/css/styles.css
@@ -38,11 +38,11 @@ body {
 
 .hero-content {
   display: grid;
-  padding-top: 50px;
-  align-items: center;
+  padding-top: 100px;
+  justify-items: center;
   scroll-snap-align: start;
-  grid-template-rows: 1fr 1fr 1fr;
-  grid-template-columns: 1fr;
+  grid-template-rows: auto auto auto;
+  grid-template-columns: auto;
   grid-template-areas:
     "title"
     "quote"
@@ -101,9 +101,6 @@ body {
 }
 .title {
   grid-area: title;
-  /* font-size: 2.7em; */
-  /* letter-spacing: 0.02em; */
-  color: #fff;
 }
 
 .pic {
@@ -123,14 +120,17 @@ body {
 
 .mission-button {
   grid-area: missionbtn;
-  grid-column: 1/4;
-  justify-self: center;
+}
+.mission-button a {
+  color: white;
+  font-size: 3em;
 }
 
 .quote {
   grid-area: quote;
   color: #fff;
   font-weight: 100;
+  padding: 0 30px;
 }
 
 /* Animation */
