--- a/css/styles.css
+++ b/css/styles.css
@@ -3,11 +3,10 @@
   --navHeight: 5em;
   --secondary-color: #ffa801;
   --normal-padding: 8em 4em 8em 4em;
+  --map-size: width: 250px;
 }
 
---map-size {
-  width: 400px;
-}
+
 
 *,
 before,
@@ -97,7 +96,7 @@ body {
 }
 
 .title img {
-  width: 300px;
+  width: var(--map-size);
 }
 .title {
   grid-area: title;
