--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,8 @@ body {
   width: 100vw;
   height: 100vh;
   scroll-snap-type: y mandatory;
+  -webkit-scroll-snap-type: y mandatory;
+
 }
 
 .hero-content {
@@ -40,6 +42,7 @@ body {
   padding-top: 100px;
   justify-items: center;
   scroll-snap-align: start;
+  -webkit-scroll-snap-align: start;
   grid-template-rows: auto auto auto;
   grid-template-columns: auto;
   grid-template-areas:
@@ -54,6 +57,7 @@ body {
   overflow: hidden;
   position: fixed;
   display: flex;
+  flex-direction: column;
   height: 70px;
   justify-content: space-between;
   top: 0;
