--- a/css/styles.css
+++ b/css/styles.css
@@ -68,31 +68,17 @@ body {
 .menu-logo {
   display: flex;
   align-items: center;
-  font-size: 1.3em;
+  font-size: 1rem;
 }
 
 .menu-items {
-  display: none;
+  display: flex;
   align-items: center;
   list-style: none;
-  column-gap: 2.5em;
+  column-gap: 10px;
 }
 
 .menu-items li {
-  cursor: pointer;
-  font-size: 1.2em;
-}
-
-.menu-logo img {
-  width: 100px;
-}
-
-.menu-logo span {
-  display: flex;
-  align-items: center;
-}
-
-#menu-logo-image {
   cursor: pointer;
 }
 
