--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,7 @@ body {
   overflow: hidden;
   position: fixed;
   display: flex;
+  padding: 20px;
   height: 70px;
   justify-content: space-between;
   top: 0;
@@ -72,7 +73,7 @@ body {
 }
 
 .menu-items {
-  display: flex;
+  display: none;
   align-items: center;
   list-style: none;
   column-gap: 10px;
