--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
   --secondary-color: #ffa801;
   --normal-padding: 8em 4em 8em 4em;
   --title-img-size: 220px;
+  --nav-height: 60px;
 }
 
 *,
@@ -37,7 +38,7 @@ body {
 
 .hero-content {
   display: grid;
-  padding-top: 110px;
+  padding-top: calc(var(--nav-height) + 30px);
   justify-items: center;
   scroll-snap-align: start;
 
@@ -57,7 +58,7 @@ body {
   position: fixed;
   display: flex;
   padding: 20px;
-  height: 70px;
+  height: var(--nav-height);
   justify-content: space-between;
   top: 0;
   width: 100%;
@@ -125,7 +126,6 @@ div.title > img {
 
 .page {
   background: gray;
-  padding-top: 110px;
 }
 
 /* Animation */
