--- a/css/styles.css
+++ b/css/styles.css
@@ -129,6 +129,9 @@ div.title > img {
   padding-top: calc(var(--nav-height) + 30px);
 }
 
+.hamburger-icon {
+  margin-top: -1px;
+}
 .hamburger-icon > div {
   display: flex;
   flex-direction: column;
