map not showing

--- a/css/styles.css
+++ b/css/styles.css
@@ -114,7 +114,7 @@ ul.menu-items {
   justify-content: center;
   height: 100%;
   width: 50vw;
-  background-image: url("./img/hero-bermuda-map.svg");
+  background-image: url("img/hero-bermuda-map.svg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: 30rem;
