--- a/css/styles.css
+++ b/css/styles.css
@@ -127,7 +127,7 @@ ul.menu-items {
   color: white;
   align-items: center;
   text-align: center;
-  width: 50%;
+  /* width: 50%; */
 }
 
 .hero-image {
