--- a/css/styles.css
+++ b/css/styles.css
@@ -127,7 +127,7 @@ ul.menu-items {
   color: white;
   align-items: center;
   text-align: center;
-  /* width: 50%; */
+  letter-spacing: 4px;
 }
 
 .hero-image {
