map not showing

--- a/css/styles.css
+++ b/css/styles.css
@@ -133,7 +133,8 @@ ul.menu-items {
   display: flex;
   justify-content: center;
   align-items: flex-end;
-  width: 50rem;
+  /* width: 50rem; */
+  width: 40rem;
 }
 
 /* bottom section of Hero section */
