--- a/css/styles.css
+++ b/css/styles.css
@@ -134,7 +134,7 @@ ul.menu-items {
   justify-content: center;
   align-items: flex-end;
   /* width: 50rem;  for screen of width 1920px*/
-  width: 40rem; /*  1440px */
+  width: 34rem; /*  1440px */
 }
 
 /* bottom section of Hero section */
@@ -147,20 +147,35 @@ ul.menu-items {
 .hero-bottom-left {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  /* justify-content: center;
+  align-items: center; */
   width: 50vw;
   height: 100%;
   background-color: #4c3050;
 }
 
-.hero-bottom-left p {
+.hero-bottom-left p.text-header {
+  display: flex;
+  /* justify-content: center;
+  align-items: center; */
+  width: 100%;
+  background-color: #060405;
+  padding: 1rem;
+  color: white;
+  font-family: "Poppins", sans-serif;
+  font-size: 2.1rem;
+}
+
+.hero-bottom-left p.text-body {
+  align-items: center;
+  /* text-align: center; */
   color: white;
   font-family: "Poppins", sans-serif;
   font-weight: 700;
-  font-size: 2.1rem;
+  font-size: 1.8rem;
   line-height: 178%;
   padding: 0 36px;
+  padding-top: 25px;
 }
 
 .hero-bottom-right {
