--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200;400&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 :root {
-  --navHeight: 5em;
   --secondary-color: #ffa801;
   --normal-padding: 8em 4em 8em 4em;
   --title-img-size: 220px;
   --nav-height: 10vh;
+  --hero-top-height: 50vh;
+  --hero-bottom-height: 20vh;
   --bg-radial: radial-gradient(
     90.59% 108.94% at 91.63% 50%,
     #633e69 0%,
@@ -25,27 +26,9 @@ html {
   scroll-behavior: smooth;
   -webkit-scroll-behavior: smooth;
 }
+
 body {
   font-family: "Roboto Slab", serif;
-  /* background-color: rgb(109, 42, 42);
-  background: linear-gradient(
-    45deg,
-    hsla(0, 59%, 12%, 0.968) 40%,
-    rgba(143, 34, 34, 1) 84%
-  ); */
-}
-
-/* .container {
-  width: 100vw;
-  height: 100vh;
-  scroll-snap-type: y mandatory;
-  -webkit-scroll-snap-type: y mandatory;
-} */
-
-/* Hero wrapper */
-.hero {
-  display: flex;
-  flex-direction: column;
 }
 
 /* nav bar styles */
@@ -55,13 +38,13 @@ body {
   display: flex;
   align-items: center;
   position: fixed;
-
   height: var(--nav-height);
   left: 0px;
   top: 0px;
   z-index: 99;
-  background: #ffffff;
+  background-color: #ffffff;
   border-bottom: 1px solid #000000;
+  /* border: 2px solid red; */
 }
 
 .nav-menu-wrapper {
@@ -90,21 +73,30 @@ ul.menu-items {
   cursor: pointer;
 }
 
+/* Hero wrapper */
+.hero {
+  /* display: flex; */
+  flex-direction: column;
+  padding-top: 10vh;
+  overflow: hidden;
+}
+
 /* top section of Hero section */
 
 .hero-top {
   display: flex;
-  position: relative;
-  height: 50vh;
-  width: 100%;
-  margin-top: var(--nav-height);
+  /* position: relative; */
+  height: 45vh;
+  width: 100vw;
+
   background: var(--bg-radial);
+  /* border: 2px solid blue; */
 }
 
 .hero-top-left {
   display: flex;
   justify-content: center;
-  align-items: flex-end;
+  /* align-items: flex-end; */
   width: 50vw;
   height: 100%;
 }
@@ -114,7 +106,8 @@ ul.menu-items {
   justify-content: center;
   height: 100%;
   width: 50vw;
-  background-image: url("https://cwbermuda.netlify.com/img/hero-bermuda-map.svg");
+  /* background-image: url("https://cwbermuda.netlify.com/img/hero-bermuda-map.svg"); */
+  background-image: url("http://localhost:5500/img/hero-bermuda-map.svg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: 30rem;
@@ -133,49 +126,53 @@ ul.menu-items {
   display: flex;
   justify-content: center;
   align-items: flex-end;
+  object-fit: contain;
   /* width: 50rem;  for screen of width 1920px*/
-  width: 34rem; /*  1440px */
+  width: 33rem; /*  1440px */
 }
 
 /* bottom section of Hero section */
 .hero-bottom {
   display: flex;
-  height: 50vh;
+  height: 45vh;
   width: 100%;
+  align-items: center;
+  /* border: 2px solid green; */
 }
 
 .hero-bottom-left {
   display: flex;
   flex-direction: column;
+  column-gap: 0;
   /* justify-content: center;
   align-items: center; */
   width: 50vw;
   height: 100%;
-  background-color: #4c3050;
+  background: var(--bg-radial);
+  background-color: white;
+  color: white;
 }
 
 .hero-bottom-left p.text-header {
   display: flex;
   justify-content: center;
-  border-bottom: 1px solid red;
+  font-size: 2.5rem;
   width: 100%;
-  background-color: #060405;
-  padding: 1rem;
-  color: white;
+  padding: 0.05rem 0;
+  color: inherit;
   font-family: "Poppins", sans-serif;
-  font-size: 2.1rem;
+  background-color: #fff;
+  color: black;
 }
 
 .hero-bottom-left p.text-body {
-  align-items: center;
-  /* text-align: center; */
-  color: white;
   font-family: "Poppins", sans-serif;
   font-weight: 700;
   font-size: 1.8rem;
   line-height: 178%;
-  padding: 0 36px;
-  padding-top: 25px;
+  padding: 36px;
+  width: 100%;
+  height: 100%;
 }
 
 .hero-bottom-right {
@@ -183,22 +180,5 @@ ul.menu-items {
   align-items: flex-end;
   width: 50vw;
   height: 100%;
-  background-color: white;
+  background-color: rgb(255, 255, 255);
 }
-
-/* .hero-content {
-  display: grid;
-  padding-top: calc(var(--nav-height) + 30px);
-  justify-items: center;
-  scroll-snap-align: start;
-
-  -webkit-scroll-snap-align: start;
-  grid-template-rows: auto auto auto;
-  grid-template-columns: auto;
-  grid-template-areas:
-    "title"
-    "quote"
-    "missionbtn";
-  width: 100vw;
-  height: 100vh;
-} */
