--- a/css/styles.css
+++ b/css/styles.css
@@ -159,10 +159,8 @@ ul.menu-items {
   font-size: 2.5rem;
   width: 100%;
   padding: 0.05rem 0;
-  color: inherit;
+  color: white;
   font-family: "Poppins", sans-serif;
-  background-color: #fff;
-  color: black;
 }
 
 .hero-bottom-left p.text-body {
@@ -173,6 +171,10 @@ ul.menu-items {
   padding: 36px;
   width: 100%;
   height: 100%;
+  background-image: url("http://localhost:5500/img/squiggle.svg");
+  background-repeat: no-repeat;
+  background-position: center top;
+  background-size: 13rem;
 }
 
 .hero-bottom-right {
