--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@
     #633e69 0%,
     #050304 97.49%
   );
+  --url: "http://localhost:5500/";
 }
 
 *,
@@ -106,8 +107,8 @@ ul.menu-items {
   justify-content: center;
   height: 100%;
   width: 50vw;
-  /* background-image: url("https://cwbermuda.netlify.com/img/hero-bermuda-map.svg"); */
-  background-image: url("http://localhost:5500/img/hero-bermuda-map.svg");
+  background-image: url("https://cwbermuda.netlify.com/img/hero-bermuda-map.svg");
+  /* background-image: url("http://localhost:5500/img/hero-bermuda-map.svg"); */
   background-repeat: no-repeat;
   background-position: center;
   background-size: 30rem;
@@ -171,7 +172,8 @@ ul.menu-items {
   padding: 36px;
   width: 100%;
   height: 100%;
-  background-image: url("http://localhost:5500/img/squiggle.svg");
+  /* background-image: url("http://localhost:5500/img/squiggle.svg"); */
+  background-image: url("https://cwbemuda.netlify.com/img/squiggle.svg");
   background-repeat: no-repeat;
   background-position: center top;
   background-size: 13rem;
