--- a/css/styles.css
+++ b/css/styles.css
@@ -173,7 +173,7 @@ ul.menu-items {
   width: 100%;
   height: 100%;
   /* background-image: url("http://localhost:5500/img/squiggle.svg"); */
-  background-image: url("https://cwbemuda.netlify.com/img/squiggle.svg");
+  background-image: url("https://cwbermuda.netlify.com/img/squiggle.svg");
   background-repeat: no-repeat;
   background-position: center top;
   background-size: 13rem;
