--- a/css/styles.css
+++ b/css/styles.css
@@ -127,7 +127,7 @@ ul.menu-items {
   display: flex;
   justify-content: center;
   align-items: flex-end;
-  object-fit: contain;
+
   /* width: 50rem;  for screen of width 1920px*/
   width: 33rem; /*  1440px */
 }
@@ -162,6 +162,7 @@ ul.menu-items {
   padding: 0.05rem 0;
   color: white;
   font-family: "Poppins", sans-serif;
+  border: 2px solid red;
 }
 
 .hero-bottom-left p.text-body {
