--- a/css/styles.css
+++ b/css/styles.css
@@ -127,7 +127,7 @@ ul.menu-items {
   display: flex;
   justify-content: center;
   align-items: flex-end;
-
+  border: 2px solid blue;
   /* width: 50rem;  for screen of width 1920px*/
   width: 33rem; /*  1440px */
 }
