--- a/css/styles.css
+++ b/css/styles.css
@@ -126,7 +126,7 @@ ul.menu-items {
 .hero-image {
   display: flex;
   justify-content: center;
-  align-items: flex-end;
+  /* align-items: flex-end; */
   border: 2px solid blue;
   /* width: 50rem;  for screen of width 1920px*/
   width: 33rem; /*  1440px */
