--- a/css/styles.css
+++ b/css/styles.css
@@ -130,6 +130,7 @@ ul.menu-items {
   border: 2px solid blue;
   /* width: 50rem;  for screen of width 1920px*/
   width: 33rem; /*  1440px */
+  height: 100%;
 }
 
 /* bottom section of Hero section */
