--- a/css/styles.css
+++ b/css/styles.css
@@ -138,9 +138,11 @@ ul.menu-items {
 /* bottom section of Hero section */
 .hero-bottom {
   display: flex;
+  flex-direction: column;
   height: 45vh;
   width: 100%;
   align-items: center;
+  background: var(--bg-radial);
   /* border: 2px solid green; */
 }
 
@@ -157,17 +159,17 @@ ul.menu-items {
   color: white;
 }
 
-.hero-bottom-left p.text-header {
+.hero-bottom p.text-header {
   display: flex;
   justify-content: center;
   font-size: 2.5rem;
   width: 100%;
-  padding: 0.05rem 0;
+  padding-top: 0.5em;
   color: white;
   font-family: "Poppins", sans-serif;
 }
 
-.hero-bottom-left p.text-body {
+.hero-bottom p.text-body {
   font-family: "Poppins", sans-serif;
   font-weight: 700;
   font-size: 1.8rem;
@@ -180,6 +182,7 @@ ul.menu-items {
   background-repeat: no-repeat;
   background-position: center top;
   background-size: 13rem;
+  color: #fff;
 }
 
 .hero-bottom-right {
