--- a/css/styles.css
+++ b/css/styles.css
@@ -141,7 +141,7 @@ ul.menu-items {
   flex-direction: column;
   height: 45vh;
   width: 100%;
-  align-items: center;
+  /* align-items: center; */
   background: var(--bg-radial);
   /* border: 2px solid green; */
 }
@@ -152,10 +152,10 @@ ul.menu-items {
   column-gap: 0;
   /* justify-content: center;
   align-items: center; */
-  width: 50vw;
+  width: 60vw;
   height: 100%;
-  background: var(--bg-radial);
-  background-color: white;
+  /* background: var(--bg-radial); */
+  /* background-color: white; */
   color: white;
 }
 
@@ -188,7 +188,7 @@ ul.menu-items {
 .hero-bottom-right {
   justify-content: center;
   align-items: flex-end;
-  width: 50vw;
+  width: 40vw;
   height: 100%;
   background-color: rgb(255, 255, 255);
 }
