--- a/css/styles.css
+++ b/css/styles.css
@@ -149,13 +149,9 @@ ul.menu-items {
 .hero-bottom-left {
   display: flex;
   flex-direction: column;
-  column-gap: 0;
-  /* justify-content: center;
-  align-items: center; */
   width: 60vw;
   height: 100%;
-  /* background: var(--bg-radial); */
-  /* background-color: white; */
+
   color: white;
 }
 
@@ -163,6 +159,7 @@ ul.menu-items {
   display: flex;
   justify-content: center;
   font-size: 2.5rem;
+  padding-top: 1rem;
   width: 100%;
 
   color: white;
