--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,6 @@ body {
 }
 
 /* nav bar styles */
-
 .navbar {
   width: 100vw;
   display: flex;
@@ -76,7 +75,7 @@ ul.menu-items {
 
 /* Hero wrapper */
 .hero {
-  /* display: flex; */
+  display: flex;
   flex-direction: column;
   padding-top: 10vh;
   overflow: hidden;
@@ -87,18 +86,14 @@ ul.menu-items {
 
 .hero-top {
   display: flex;
-  /* position: relative; */
   height: 45vh;
   width: 100vw;
-
-  /* background: var(--bg-radial); */
-  /* border: 2px solid blue; */
+  border-bottom: 1px solid #633e69;
 }
 
 .hero-top-left {
   display: flex;
   justify-content: center;
-  /* align-items: flex-end; */
   width: 50vw;
   height: 100%;
 }
@@ -106,21 +101,22 @@ ul.menu-items {
 .hero-top-right {
   display: flex;
   justify-content: center;
+  align-items: center;
   height: 100%;
   width: 50vw;
-  background-image: url("https://cwbermuda.netlify.com/img/hero-bermuda-map.svg");
-  /* background-image: url("http://localhost:5500/img/hero-bermuda-map.svg"); */
+  /* background-image: url("https://cwbermuda.netlify.com/img/hero-bermuda-map.svg"); */
+  background-image: url("http://localhost:5500/img/hero-bermuda-map.svg");
   background-repeat: no-repeat;
   background-position: center;
   /* background-size: 30rem; */
-  background-size: 35rem;
+  background-size: 28rem;
 }
 
 .hero-title-top {
   display: flex;
   font-family: "Reboto Slab", sans-serif;
   /* font-size: 6rem; */
-  font-size: 8rem;
+  font-size: 6rem;
   color: white;
   align-items: center;
   text-align: center;
@@ -128,11 +124,10 @@ ul.menu-items {
 
 .hero-image {
   display: flex;
-  /* justify-content: center; */
-  /* align-items: flex-end; */
-
-  width: 50rem; /*for screen of width 1920px */
-  /* width: 33rem;  1440px */
+  justify-content: center;
+  align-items: flex-end;
+  /* width: 50rem;  */
+  width: 35rem;
   height: 100%;
 }
 
@@ -141,9 +136,6 @@ ul.menu-items {
   display: flex;
   height: 45vh;
   width: 100%;
-  /* align-items: center; */
-  /* background: var(--bg-radial); */
-  /* border: 2px solid green; */
 }
 
 .hero-bottom-left {
@@ -151,17 +143,15 @@ ul.menu-items {
   flex-direction: column;
   width: 60vw;
   height: 100%;
-
   color: white;
 }
 
 .hero-bottom p.text-header {
   display: flex;
   justify-content: center;
-  font-size: 2.5rem;
+  font-size: 2.2rem;
   padding-top: 1rem;
   width: 100%;
-
   color: white;
   font-family: "Poppins", sans-serif;
 }
@@ -169,13 +159,14 @@ ul.menu-items {
 .hero-bottom p.text-body {
   font-family: "Poppins", sans-serif;
   font-weight: 700;
-  font-size: 1.8rem;
-  line-height: 178%;
+  font-size: 1.5rem;
+  line-height: 180%;
   padding: 36px;
   width: 100%;
   height: 100%;
-  /* background-image: url("http://localhost:5500/img/squiggle.svg"); */
-  background-image: url("https://cwbermuda.netlify.com/img/squiggle.svg");
+  padding-top: 4rem;
+  background-image: url("http://localhost:5500/img/squiggle.svg");
+  /* background-image: url("https://cwbermuda.netlify.com/img/squiggle.svg"); */
   background-repeat: no-repeat;
   background-position: center top;
   background-size: 22rem;
@@ -183,10 +174,10 @@ ul.menu-items {
 }
 
 .hero-bottom-right {
+  display: flex;
   justify-content: center;
-  align-items: flex-end;
+  align-items: center;
   width: 40vw;
   height: 100%;
   color: white;
-  /* background-color: rgb(255, 255, 255); */
 }
