--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,6 @@
     #633e69 0%,
     #050304 97.49%
   );
-  --url: "http://localhost:5500/";
 }
 
 *,
@@ -104,8 +103,8 @@ ul.menu-items {
   align-items: center;
   height: 100%;
   width: 50vw;
-  /* background-image: url("https://cwbermuda.netlify.com/img/hero-bermuda-map.svg"); */
-  background-image: url("http://localhost:5500/img/hero-bermuda-map.svg");
+  background-image: url("https://cwbermuda.netlify.com/img/hero-bermuda-map.svg");
+  /* background-image: url("http://localhost:5500/img/hero-bermuda-map.svg"); */
   background-repeat: no-repeat;
   background-position: center;
   /* background-size: 30rem; */
@@ -165,8 +164,8 @@ ul.menu-items {
   width: 100%;
   height: 100%;
   padding-top: 4rem;
-  background-image: url("http://localhost:5500/img/squiggle.svg");
-  /* background-image: url("https://cwbermuda.netlify.com/img/squiggle.svg"); */
+  /* background-image: url("http://localhost:5500/img/squiggle.svg"); */
+  background-image: url("https://cwbermuda.netlify.com/img/squiggle.svg");
   background-repeat: no-repeat;
   background-position: center top;
   background-size: 22rem;
