map not showing

--- a/css/styles.css
+++ b/css/styles.css
@@ -200,8 +200,9 @@ ul.menu-items {
     height: 100%;
   }
 
+  /* Bermuda Map */
   .hero-top-right {
-    background-size: 30rem;
+    background-size: 35rem;
   }
 
   .hero-title-top {
