--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200;400&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap");
+
 :root {
   --secondary-color: #ffa801;
   --normal-padding: 8em 4em 8em 4em;
@@ -25,10 +27,6 @@ after {
 html {
   scroll-behavior: smooth;
   -webkit-scroll-behavior: smooth;
-}
-
-body {
-  font-family: "Roboto Slab", serif;
 }
 
 /* nav bar styles */
@@ -113,7 +111,7 @@ ul.menu-items {
 
 .hero-title-top {
   display: flex;
-  font-family: "Reboto Slab", sans-serif;
+  font-family: "Caveat", cursive;
   /* font-size: 6rem; */
   font-size: 6rem;
   color: white;
