map not showing

--- a/css/styles.css
+++ b/css/styles.css
@@ -85,7 +85,7 @@ ul.menu-items {
   display: flex;
   height: 45vh;
   width: 100vw;
-  border-bottom: 1px solid #633e69;
+  /* border-bottom: 4px solid #212122; */
 }
 
 .hero-top-left {
@@ -103,7 +103,8 @@ ul.menu-items {
   width: 50vw;
   background-image: url("https://cwbermuda.netlify.com/img/hero-bermuda-map.svg");
   /* background-image: url("http://localhost:5500/img/hero-bermuda-map.svg"); */
-
+  background-repeat: no-repeat;
+  background-position: center;
   /* background-size: 30rem; */
   background-size: 28rem;
 }
@@ -135,7 +136,7 @@ ul.menu-items {
   background-image: url("https://cwbermuda.netlify.com/img/yellow-blob.svg");
   background-repeat: no-repeat;
   background-position: top right;
-  background-size: 800px;
+  /* background-size: 60px; */
 }
 
 .hero-bottom-left {
