--- a/css/styles.css
+++ b/css/styles.css
@@ -101,7 +101,7 @@ ul.menu-items {
   align-items: center;
   height: 100%;
   width: 50vw;
-  background-image: url("https://cwbermuda.netlify.com/img/hero-bermuda-map.svg");
+  background-image: url("http://localhost:5500/img/Bermuda.svg");
   /* background-image: url("http://localhost:5500/img/hero-bermuda-map.svg"); */
   background-repeat: no-repeat;
   background-position: center;
@@ -133,7 +133,7 @@ ul.menu-items {
   display: flex;
   height: 45vh;
   width: 100%;
-  background-image: url("https://cwbermuda.netlify.com/img/yellow-blob.svg");
+  /* background-image: url("https://cwbermuda.netlify.com/img/yellow-blob.svg"); */
   background-repeat: no-repeat;
   background-position: top right;
   /* background-size: 60px; */
@@ -181,6 +181,24 @@ ul.menu-items {
   width: 40vw;
   height: 100%;
   color: white;
+}
+
+#learn-more-btn {
+  width: 350px;
+  height: 108px;
+  font-family: "Poppins", sans-serif;
+  background-color: #7a47a0;
+  color: white;
+  border-radius: 25px;
+  border: none;
+  outline: none;
+  font-weight: 700;
+  font-size: 1.8rem;
+  cursor: pointer;
+}
+
+#learn-more-btn:hover {
+  background-color: #7d529d;
 }
 
 /* Media Queries */
