--- a/css/styles.css
+++ b/css/styles.css
@@ -74,7 +74,7 @@ ul.menu-items {
 .hero {
   display: flex;
   flex-direction: column;
-  padding-top: 10vh;
+  padding-top: calc(var(--nav-height) + 1.7rem);
   overflow: hidden;
   background: var(--bg-radial);
 }
@@ -100,14 +100,14 @@ ul.menu-items {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  height: auto;
   width: 45vw;
-  background-image: url("https://cwbermuda.netlify.com/img/Bermuda.svg");
-  /* background-image: url("http://localhost:5500/img/hero-bermuda-map.svg"); */
+  /* background-image: url("https://cwbermuda.netlify.com/img/Bermuda.svg"); */
+  background-image: url("http://localhost:5500/img/Bermuda.svg");
   background-repeat: no-repeat;
   background-position: center;
   /* background-size: 30rem; */
-  background-size: 28rem;
+  background-size: 30rem;
 }
 
 .hero-title-top {
@@ -162,7 +162,7 @@ ul.menu-items {
   font-family: "Poppins", sans-serif;
   font-weight: 700;
   font-size: 1.5rem;
-  line-height: 180%;
+  line-height: 160%;
   padding: 36px;
   width: 100%;
   height: 100%;
@@ -171,7 +171,7 @@ ul.menu-items {
   background-image: url("https://cwbermuda.netlify.com/img/squiggle.svg");
   background-repeat: no-repeat;
   background-position: center top;
-  background-size: 22rem;
+  background-size: 19rem;
   color: #fff;
 }
 
