--- a/css/styles.css
+++ b/css/styles.css
@@ -102,8 +102,8 @@ ul.menu-items {
   align-items: center;
   height: auto;
   width: 45vw;
-  /* background-image: url("https://cwbermuda.netlify.com/img/Bermuda.svg"); */
-  background-image: url("http://localhost:5500/img/Bermuda.svg");
+  background-image: url("https://cwbermuda.netlify.com/img/Bermuda.svg");
+  /* background-image: url("http://localhost:5500/img/Bermuda.svg"); */
   background-repeat: no-repeat;
   background-position: center;
   /* background-size: 30rem; */
@@ -134,7 +134,6 @@ ul.menu-items {
   display: flex;
   height: 45vh;
   width: 100%;
-  /* background-image: url("https://cwbermuda.netlify.com/img/yellow-blob.svg"); */
   background-repeat: no-repeat;
   background-position: top right;
   /* background-size: 60px; */
