--- a/css/styles.css
+++ b/css/styles.css
@@ -91,6 +91,7 @@ ul.menu-items {
   display: flex;
   height: 45vh;
   width: 100vw;
+  justify-content: center;
 }
 
 .hero-top-left {
@@ -103,7 +104,7 @@ ul.menu-items {
 .hero-top-right {
   display: flex;
   justify-content: center;
-  /* align-items: center; */
+  align-items: center;
   height: auto;
   width: 45vw;
   background-image: url("https://cwbermuda.netlify.com/img/Bermuda.svg");
